--- a/employee.ui
+++ b/employee.ui
@@ -456,7 +456,88 @@
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">#info_frame {
+	background-color: #fff;
+	border: none;
+	border-radius: 5px;
+}
+
+#info_frame QLabel,
+#info_frame QLineEdit,
+#info_frame QComboBox,
+#function_frame QPushButton,
+QHeaderView::section
+ {
+	font-family: Segoe UI Semibold;
+	font-size: 12px;
+}
+
+#info_frame QLineEdit,
+#info_frame QComboBox {
+	padding: 4px 5px;
+	border: 1px solid #838383;
+	border-radius: 2px;
+}
+
+#info_frame QLineEdit:focus,
+#info_frame QComboBox:focus
+ {
+	border-color: #0055ff;
+}
+
+QComboBox::drop-down { 
+	background: transparent; 
+	border: none;
+	margin-right: 5px;
+} 
+
+QComboBox::down-arrow {
+	image: url(:/icons/icons/expand_more.svg);
+}
+
+#result_frame {
+	border-radius: 5px;
+	background-color: #fff;
+}
+
+QHeaderView::section{
+	border: none;
+	border-bottom:1px solid #d0c6ff;
+	text-align:left;
+	padding: 3px 5px;
+}
+
+QTableWidget::Item{
+	border-bottom:1px solid #d0c6ff;
+	color: black;
+	padding-left: 3px;
+}
+
+#function_frame QPushButton {
+	font-size: 14px;
+	padding: 5px 10px;
+	border: 2px solid #f0f0f0;
+	border-radius: 5px;
+	background-color: #84e8f7;
+}
+
+#function_frame QPushButton:hover {
+	border-color: #4c96f7;
+	font-size: 15px;
+}
+
+#function_frame #delete_btn {
+	background-color: #ff8183;
+}
+
+#function_frame #delete_btn:hover {
+	border-color: #dc0004;
+}
+
+
+
+
+</string>
   </property>
   <widget class="QWidget" name="employeeContainer" native="true">
    <property name="geometry">
@@ -490,27 +571,27 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -519,27 +600,27 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -548,27 +629,27 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -577,15 +658,19 @@
     </property>
     <property name="font">
      <font>
-      <family>黑体</family>
+      <family>Arial</family>
       <pointsize>10</pointsize>
      </font>
     </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">background:#F1F1F1;
+</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
@@ -835,9 +920,9 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -853,18 +938,18 @@
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -882,9 +967,9 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -900,18 +985,18 @@
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -929,9 +1014,9 @@
        <colorrole role="Button">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -947,18 +1032,18 @@
        <colorrole role="Base">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
        <colorrole role="Window">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>47</red>
-          <green>59</green>
-          <blue>82</blue>
+          <red>241</red>
+          <green>241</green>
+          <blue>241</blue>
          </color>
         </brush>
        </colorrole>
@@ -973,6 +1058,12 @@
        </colorrole>
       </disabled>
      </palette>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background : #F1F1F1;</string>
     </property>
     <property name="text">
      <string>Add</string>
