--- a/sponsor.ui
+++ b/sponsor.ui
@@ -491,51 +491,115 @@ QPushButton:checked {
 }
 </string>
   </property>
-  <widget class="QWidget" name="result_widget" native="true">
+  <widget class="QFrame" name="frame_3">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>170</y>
-     <width>1301</width>
-     <height>971</height>
+     <x>10</x>
+     <y>6</y>
+     <width>914</width>
+     <height>69</height>
     </rect>
    </property>
-   <property name="baseSize">
-    <size>
-     <width>400</width>
-     <height>400</height>
-    </size>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
    </property>
-   <widget class="QPushButton" name="add_btn">
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+  </widget>
+  <widget class="QLabel" name="title_label">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>10</y>
+     <width>894</width>
+     <height>49</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Roboto Black</family>
+     <pointsize>30</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: #F1F1F1</string>
+   </property>
+   <property name="text">
+    <string>Liste des sponsors</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QWidget" name="widget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>170</y>
+     <width>61</width>
+     <height>441</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color:#fffff;</string>
+   </property>
+   <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>410</y>
-      <width>171</width>
-      <height>41</height>
+      <x>10</x>
+      <y>10</y>
+      <width>47</width>
+      <height>431</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 5px 10px;
+    color: black;
+}
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>180</y>
+      <width>41</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Add</string>
-    </property>
-    <property name="icon">
-     <iconset>
-      <normaloff>../../../Users/moham/Desktop/icons/add.svg</normaloff>../../../Users/moham/Desktop/icons/add.svg</iconset>
-    </property>
-    <property name="iconSize">
-     <size>
-      <width>20</width>
-      <height>20</height>
-     </size>
+     <string>PushButton</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QWidget" name="widget_2" native="true">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>130</y>
+     <width>381</width>
+     <height>551</height>
+    </rect>
+   </property>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>90</y>
+      <x>10</x>
+      <y>50</y>
       <width>351</width>
-      <height>401</height>
+      <height>431</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -555,8 +619,8 @@ QPushButton:checked {
    <widget class="QLineEdit" name="lineEdit_2">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>110</y>
+      <x>140</x>
+      <y>90</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -579,8 +643,8 @@ QTextEdit {
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>110</y>
+      <x>60</x>
+      <y>90</y>
       <width>31</width>
       <height>49</height>
      </rect>
@@ -596,8 +660,8 @@ QTextEdit {
    <widget class="QLineEdit" name="lineEdit_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>180</y>
+      <x>140</x>
+      <y>170</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -620,7 +684,7 @@ QTextEdit {
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>140</x>
       <y>260</y>
       <width>171</width>
       <height>41</height>
@@ -644,7 +708,7 @@ QTextEdit {
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>140</x>
       <y>350</y>
       <width>171</width>
       <height>31</height>
@@ -680,11 +744,34 @@ QTextEdit {
      </property>
     </item>
    </widget>
+   <widget class="QPushButton" name="add_btn">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>430</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Add</string>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../../Users/moham/Desktop/icons/add.svg</normaloff>../../../Users/moham/Desktop/icons/add.svg</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>20</width>
+      <height>20</height>
+     </size>
+    </property>
+   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>190</y>
+      <x>50</x>
+      <y>180</y>
       <width>61</width>
       <height>20</height>
      </rect>
@@ -700,7 +787,7 @@ QTextEdit {
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>60</x>
       <y>270</y>
       <width>60</width>
       <height>17</height>
@@ -716,7 +803,7 @@ QTextEdit {
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>50</x>
       <y>350</y>
       <width>81</width>
       <height>31</height>
@@ -729,12 +816,28 @@ QTextEdit {
      <string>categories</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QWidget" name="result_widget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>540</x>
+     <y>40</y>
+     <width>851</width>
+     <height>591</height>
+    </rect>
+   </property>
+   <property name="baseSize">
+    <size>
+     <width>400</width>
+     <height>400</height>
+    </size>
+   </property>
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>90</y>
-      <width>601</width>
+      <x>60</x>
+      <y>160</y>
+      <width>761</width>
       <height>371</height>
      </rect>
     </property>
@@ -1399,8 +1502,8 @@ QTableWidget QTableWidget::item:selected {
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>1150</x>
-      <y>20</y>
+      <x>590</x>
+      <y>110</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -1422,8 +1525,8 @@ QTableWidget QTableWidget::item:selected {
    <widget class="QLineEdit" name="search_input">
     <property name="geometry">
      <rect>
-      <x>610</x>
-      <y>31</y>
+      <x>260</x>
+      <y>80</y>
       <width>291</width>
       <height>21</height>
      </rect>
@@ -1435,8 +1538,8 @@ QTableWidget QTableWidget::item:selected {
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>1220</x>
-      <y>17</y>
+      <x>650</x>
+      <y>110</y>
       <width>51</width>
       <height>41</height>
      </rect>
@@ -1449,95 +1552,6 @@ QTableWidget QTableWidget::item:selected {
       <normaloff>../../../Downloads/charte-de-croissance.png</normaloff>../../../Downloads/charte-de-croissance.png</iconset>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>90</y>
-      <width>47</width>
-      <height>391</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"> background-color: #ffffff;</string>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>260</y>
-      <width>41</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <zorder>label_5</zorder>
-   <zorder>lineEdit_2</zorder>
-   <zorder>label_4</zorder>
-   <zorder>lineEdit_3</zorder>
-   <zorder>lineEdit</zorder>
-   <zorder>comboBox</zorder>
-   <zorder>label</zorder>
-   <zorder>label_2</zorder>
-   <zorder>label_3</zorder>
-   <zorder>tableWidget</zorder>
-   <zorder>pushButton</zorder>
-   <zorder>search_input</zorder>
-   <zorder>add_btn</zorder>
-   <zorder>pushButton_2</zorder>
-   <zorder>label_6</zorder>
-   <zorder>pushButton_3</zorder>
-  </widget>
-  <widget class="QFrame" name="frame_3">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>6</y>
-     <width>914</width>
-     <height>69</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::StyledPanel</enum>
-   </property>
-   <property name="frameShadow">
-    <enum>QFrame::Raised</enum>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2"/>
-  </widget>
-  <widget class="QLabel" name="title_label">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>10</y>
-     <width>894</width>
-     <height>49</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Roboto Black</family>
-     <pointsize>30</pointsize>
-     <weight>75</weight>
-     <bold>true</bold>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: #F1F1F1</string>
-   </property>
-   <property name="text">
-    <string>Liste des sponsors</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignCenter</set>
-   </property>
   </widget>
  </widget>
  <resources/>
@@ -1545,32 +1559,32 @@ QTableWidget QTableWidget::item:selected {
   <connection>
    <sender>pushButton_3</sender>
    <signal>toggled(bool)</signal>
-   <receiver>label_6</receiver>
+   <receiver>widget_2</receiver>
    <slot>setVisible(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>550</x>
-     <y>438</y>
+     <x>48</x>
+     <y>360</y>
     </hint>
     <hint type="destinationlabel">
-     <x>510</x>
-     <y>380</y>
+     <x>207</x>
+     <y>140</y>
     </hint>
    </hints>
   </connection>
   <connection>
    <sender>pushButton_3</sender>
    <signal>toggled(bool)</signal>
-   <receiver>label_5</receiver>
+   <receiver>widget</receiver>
    <slot>setHidden(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>549</x>
-     <y>430</y>
+     <x>22</x>
+     <y>359</y>
     </hint>
     <hint type="destinationlabel">
-     <x>386</x>
-     <y>326</y>
+     <x>38</x>
+     <y>173</y>
     </hint>
    </hints>
   </connection>
